--- a/BootstrapDemo/MVCDemo/Views/Home/Index.cshtml
+++ b/BootstrapDemo/MVCDemo/Views/Home/Index.cshtml
@@ -3,13 +3,13 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>Bootstrap Demo</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-1">
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -18,14 +18,44 @@
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h2>Get more libraries</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-bordered table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email Address</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Doruk</td>
+                    <td>Tonya</td>
+                    <td>drktny@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Serkan</td>
+                    <td>Keles</td>
+                    <td>skeles@hotmail.com</td>
+                </tr>
+                <tr>
+                    <td>Olcay</td>
+                    <td>Aydogdu</td>
+                    <td>oaydogdu@yahoo.com</td>
+                </tr>
+            </tbody>              
+        </table>
+    </div>
+</div>                 
