--- a/BootstrapDemo/MVCDemo/Views/Home/Index.cshtml
+++ b/BootstrapDemo/MVCDemo/Views/Home/Index.cshtml
@@ -5,28 +5,42 @@
 <div class="jumbotron">
     <h1>Bootstrap Demo</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p>
+        <a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
+        <button class="btn btn-success btn-lg pull-right visible-lg">Large layout</button>
+        <button class="btn btn-warning btn-lg pull-right visible-md">Medium layout</button>
+        <button class="btn btn-danger btn-lg pull-right visible-sm">Small layout</button>
+        <button class="btn btn-default btn-lg pull-right visible-xs">Extra Small layout</button>
+    </p>
 </div>
 
 <div class="row">
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-6">
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-info btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-3">
         <h2>Get more libraries</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-sm" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-3">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-warning btn-xs" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <blockquote>
+            <p>The best way to learn c# is to practice building projects</p>
+            <footer>Doruk Tonya</footer>
+        </blockquote>
     </div>
 </div>
 <div class="row">
@@ -43,14 +57,14 @@
                 <tr>
                     <td>Doruk</td>
                     <td>Tonya</td>
-                    <td>drktny@gmail.com</td>
+                    <td class="text-primary">drktny@gmail.com</td>
                 </tr>
                 <tr>
                     <td>Serkan</td>
-                    <td>Keles</td>
+                    <td class="danger">Keles</td>
                     <td>skeles@hotmail.com</td>
                 </tr>
-                <tr>
+                <tr class="success">
                     <td>Olcay</td>
                     <td>Aydogdu</td>
                     <td>oaydogdu@yahoo.com</td>
